# spark-jobs

./: .gitignore  README.md  pyproject.toml
experiments/: delta-minio-test.ipynb  dotenv-tests.ipynb  spark-session-test.ipynb
spark-image/: Dockerfile  docker-compose.yaml
